<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space_bg">

    <ImageView
        android:id="@+id/astroForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/astro_description"
        android:src="@drawable/astro_somewhat"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/forgotPasswordBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="294dp"
        android:gravity="top"
        android:text="@string/forgot_password_txt"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/edtForgotPasswdEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitForgotPasswdEmailButton"
        android:layout_width="263dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_bg"
        android:text="@string/submit_btn_txt"
        android:layout_below="@id/edtForgotPasswdEmail"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black" />

</RelativeLayout>