<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backButtonCreateStudentActivity"
            android:layout_width="17.26dp"
            android:layout_height="28.51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back_btn"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/createUserBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="294dp"
            android:gravity="top"
            android:text="@string/createUser_text"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/astro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/astro_somewhat"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="somewhat astro" />

        <EditText
            android:id="@+id/edtCreateStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edtCreateStudentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/edtCreateStudentName"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:importantForAutofill="no" />

    <!-- Select Role   -->

        <TextView
            android:id="@+id/txtSelectRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtCreateStudentEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/select_role_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spnRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSelectRole"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            tools:ignore="SpeakableTextPresentCheck" />

    <!--    Select Department -->

        <TextView
            android:id="@+id/txtSelectDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spnRole"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Select Department:"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spnDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSelectDepartment"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/edtCreateStudentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spnDepartment"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edtCreateStudentConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtCreateStudentPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:importantForAutofill="no" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateStudent"
            android:layout_width="263dp"
            android:layout_height="43dp"
            android:layout_below="@+id/edtCreateStudentConfirmPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_bg"
            android:padding="10dp"
            android:text="@string/create_user_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    </RelativeLayout>
</ScrollView>